# AI-powered-devops-incident-analysis-tool

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: __init__.py  config.py  database.py  main.py  models.py
src/anomaly_detector/: __init__.py  detector.py  rules.py  statistical.py
src/github_integration/: __init__.py  client.py  templates.py
src/incident_manager/: __init__.py  manager.py
src/llm_analyzer/: __init__.py  analyzer.py  prompts.py
src/log_simulator/: __init__.py  scenarios.py  simulator.py
tests/: conftest.py  test_analyzer.py  test_api.py  test_detector.py  test_simulator.py
