[project]
name = "ai-devops-copilot"
version = "0.1.0"
description = "AI-Powered DevOps Incident Copilot - Automated incident analysis and RCA generation"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
